--- a/sgea/login/templates/usuarios/editar_evento.html
+++ b/sgea/login/templates/usuarios/editar_evento.html
@@ -96,7 +96,7 @@
                 </div>
 
             <div class="botao-enviar">
-                <button type="submit" class="form-control-sm" id="botao-enviar">Salvar alterações</button>
+                <button type="submit" id="botao-enviar">Salvar alterações</button>
             </div>
         </div>
     </div>
