--- a/sgea/login/templates/usuarios/eventos.html
+++ b/sgea/login/templates/usuarios/eventos.html
@@ -102,7 +102,7 @@
           </div>
 
           <div class="botao-enviar">
-            <button class="form-control-sm" id="botao-enviar">Enviar</button>
+            <button id="botao-enviar">Enviar</button>
           </div>
         </div>
       </div>
