feat: Adição da biblioteca Toastify para mensagens e mais urls no rodapé

--- a/sgea/login/templates/usuarios/base2.html
+++ b/sgea/login/templates/usuarios/base2.html
@@ -33,8 +33,7 @@
                 <a href="mailto:casadeatena@gmail.com">casadeatena@gmail.com</a>
             </div>
             <ul class="footer-links">
-                <li><a href="{% url 'inscricao' %}">Eventos</a></li>
-                <li><a href="{% url 'meus_certificados' %}">Certificados</a></li>
+                <i>Links ficarão disponíveis após o login</i>
             </ul>
         </div>
 
