--- a/sgea/login/templates/usuarios/base.html
+++ b/sgea/login/templates/usuarios/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>{% block title %}Header 1{% endblock %}</title>
     <link rel="icon" type="image/png" href="{% static 'assets/logos/logo-site.png' %}">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     
@@ -39,11 +40,6 @@
                     </a>
                 </li>
                 {% if usuario.tipo == "organizador" %}
-                <li>
-                    <a href="{% url 'registro' %}" id="nav-certif" 
-                        class="{% if 'registro' in request.path %}ativo{% endif %}">Registros
-                    </a>
-                </li>
                 <li>
                     <a href="{% url 'ver_certs' %}">Emissão</a>
                 </li>
@@ -80,6 +76,7 @@
     </div>
 
     <script src="{% static 'js/script.js' %}"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
     <footer id="footer-container">
         <div class="footer-info">
@@ -90,8 +87,10 @@
                 <a href="mailto:casadeatena@gmail.com">casadeatena@gmail.com</a>
             </div>
             <ul class="footer-links">
+                <li><a href="{% url 'sobre' %}">Sobre</a></li>
                 <li><a href="{% url 'inscricao' %}">Eventos</a></li>
                 <li><a href="{% url 'meus_certificados' %}">Certificados</a></li>
+                <li><a href="{% url 'meus_eventos' %}">Meus eventos</a></li>
             </ul>
         </div>
 
