--- a/sgea/login/templates/usuarios/certificados.html
+++ b/sgea/login/templates/usuarios/certificados.html
@@ -39,6 +39,12 @@
   </div>
 
   <div class="botao-organizador">
+    <a href="{% url 'registro' %}">
+      Registros
+    </a>
+  </div>
+
+  <div class="botao-organizador">
       <form method="post" action="{% url 'emitir_certificados' %}"> 
           {% csrf_token %}
           <button type="submit">
