refactor: trocando base2.html por base.html

--- a/sgea/login/templates/usuarios/certificados.html
+++ b/sgea/login/templates/usuarios/certificados.html
@@ -1,4 +1,4 @@
-{% extends 'usuarios/base2.html' %}
+{% extends 'usuarios/base.html' %}
 {% load static %}
 
 {% block title %}Emissão de Certficados - Casa de Atena{% endblock %}
