--- a/sgea/login/templates/usuarios/home.html
+++ b/sgea/login/templates/usuarios/home.html
@@ -24,19 +24,19 @@
                   <div class="form-cadastroUsu-linha">
                       <div class="form-cadastroUsu-grupo">
                         <label>Nome</label>
-                        <input name = "nome" class = "form-control-sm" type = "text" required style="width: 220px">
+                        <input name = "nome" class = "form-control-sm" value="{{ nome_preenchido|default:'' }}" type = "text" required style="width: 220px">
                       </div> 
-                      
+
                       <div class="form-cadastroUsu-grupo">
                         <label>Sobrenome</label>
-                        <input name = "sobrenome" class = "form-control-sm" type = "text" required style="width: 220px">
+                        <input name = "sobrenome" class = "form-control-sm" value="{{ sobrenome_preenchido|default:'' }}" type = "text" required style="width: 220px">
                       </div> 
                   </div>
 
                   <div class="form-cadastroUsu-linha">
                       <div class="form-cadastroUsu-grupo">
                         <label>Senha</label>
-                        <input name = "senha" class = "form-control-sm" type = "text" required style="width: 220px">
+                        <input name = "senha" class = "form-control-sm" value="{{ senha_preenchida|default:'' }}" type = "text" required style="width: 220px">
                       </div> 
                 
                       <div class="form-cadastroUsu-grupo">
@@ -48,12 +48,12 @@
                   <div class="form-cadastroUsu-linha">
                       <div class="form-cadastroUsu-grupo">
                         <label>Email</label>
-                        <input name = "email" class = "form control-sm" type = "text" required style="width: 220px">
+                        <input name = "email" class = "form control-sm" value="{{ email_preenchido|default:'' }}" type = "text" required style="width: 220px">
                       </div>
 
                       <div class="form-cadastroUsu-grupo">
                         <label>Telefone</label>
-                        <input name = "telefone" class = "form control-sm" type = "text" required style="width: 220px" placeholder="XX XXXXX-XXXX">
+                        <input name = "telefone" class = "form control-sm" value="{{ telefone_preenchido|default:'' }}" type = "text" required style="width: 220px" placeholder="XX XXXXX-XXXX">
                       </div>  
                   </div>
 
@@ -62,15 +62,33 @@
                       <label for = "ensi">Instituição de ensino</label>
                       <select name = "ensi" id = "ensi" required style="width: 220px">
                         <option value="" disabled selected hidden style='display : none'>Selecione</option>
-                        <option value = "CEUB"> CEUB </option> 
-                        <option value = "UNIEURO"> UNIEURO </option>
-                        <option value = "IFB"> IFB </option>
-                        <option value = "UNB"> UNB </option>
-                        <option value = "CATOLICA"> CATOLICA </option>
-                        <option value = "UNIPLAN"> UNIPLAN </option>
-                        <option value = "IESB"> IESB </option>
-                        <option value = "UDF"> UDF </option>
-                        <option value = "UPIS"> UPIS </option>
+                        {% if instituicao_preenchida == 'CEUB' %}
+                          <option selected = "CEUB"> CEUB </option> 
+                        {% endif %}
+                        {% if instituicao_preenchida == 'UNIEURO' %}
+                          <option selected = "UNIEURO"> UNIEURO </option> 
+                        {% endif %}
+                        {% if instituicao_preenchida == 'IFB' %}
+                          <option selected = "IFB"> IFB </option> 
+                        {% endif %}
+                        {% if instituicao_preenchida == 'UNB' %}
+                          <option selected = "UNB"> UNB </option> 
+                        {% endif %}
+                        {% if instituicao_preenchida == 'CATOLICA' %}
+                          <option selected = "CATOLICA">CATOLICA</option> 
+                        {% endif %}
+                        {% if instituicao_preenchida == 'UNIPLAN' %}
+                          <option selected = "UNIPLAN"> UNIPLAN </option> 
+                        {% endif %}
+                        {% if instituicao_preenchida == 'IESB' %}
+                          <option selected = "IESB"> IESB </option> 
+                        {% endif %}
+                        {% if instituicao_preenchida == 'UDF' %}
+                          <option selected = "UDF"> UDF </option> 
+                        {% endif %}
+                        {% if instituicao_preenchida == 'UPIS' %}
+                          <option selected = "UPIS"> UPIS </option> 
+                        {% endif %}
                       </select>
                     </div>
 
