--- a/sgea/login/static/css/style.css
+++ b/sgea/login/static/css/style.css
@@ -854,7 +854,7 @@ nav a.ativo {
     font-weight: 600;
 }
 
-.form-grupo input {
+.form-grupo input, select {
     padding: 15px;
     background-color: var(--background-box-color);
     border-radius: 10px;
@@ -862,6 +862,7 @@ nav a.ativo {
     font-size: 14px;
     outline: none;
 }
+
 
 .botao-enviar {
     text-align: center;
@@ -1613,6 +1614,92 @@ nav a.ativo {
     color: white;
     transform: scale(1.1);
 
+}
+
+/* --------------------------------------------------------------------------- */
+/* --------------------------------------------------------------------------- */
+
+.meus-eventos-container {
+    max-width: 900px;
+    margin: 40px auto;
+    padding: 20px 30px;
+
+    background-color: var(--primary-color);
+    border-radius: 10px;
+
+    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+}
+
+.meus-eventos-titulo {
+    text-align: center;
+    font-size: 26px;
+    color: white;
+    margin-bottom: 25px;
+    font-weight: 700;
+}
+
+.meus-eventos-lista {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.meus-eventos-card {
+    background: white;
+    border-radius: 10px;
+    padding: 15px 20px;
+
+    box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+    transition: transform .2s ease;
+}
+
+.meus-eventos-card:hover {
+    transform: scale(1.01);
+}
+
+.meus-eventos-itens {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.meus-eventos-img {
+    width: 160px;
+    height: 120px;
+
+    border-radius: 8px;
+    overflow: hidden;
+    background: #ddd;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.meus-eventos-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.meus-eventos-img-placeholder {
+    color: #555;
+    font-style: italic;
+}
+
+.meus-eventos-info h3 {
+    margin-bottom: 8px;
+    font-size: 20px;
+}
+
+.meus-eventos-info p {
+    margin: 4px 0;
+}
+
+.meus-eventos-empty {
+    color: white;
+    text-align: center;
+    margin-top: 20px;
 }
 
 
