style: Modificado a tabela de visualização de senhas (removido coluna de senhas), aprimorado a edição de perfis.

--- a/sgea/login/templates/usuarios/editar_usuario.html
+++ b/sgea/login/templates/usuarios/editar_usuario.html
@@ -25,10 +25,15 @@
               <label for="nome">Nome</label>
               <input type="text" name="nome" value="{{ usuario.nome }}" required>
           </div>
+          
+          <div class="form-ep-grupo">
+              <label for="nome">Sobrenome</label>
+              <input type="text" name="sobrenome" value="{{ usuario.sobrenome }}" required>
+          </div>
 
           <div class="form-ep-grupo">
               <label for="telefone">Telefone</label>
-              <input type="text" name="telefone" value="{{ usuario.telefone }}" placeholder="XX XXXXX-XXXX" required>
+              <input type="text" name="telefone" value="{{ usuario.telefone }}" placeholder="XX XXXXX XXXX" required>
           </div>
 
           <div class="form-ep-grupo">
