--- a/sgea/login/templates/usuarios/eventosU.html
+++ b/sgea/login/templates/usuarios/eventosU.html
@@ -25,7 +25,7 @@
                     </div>
                     {% endif %}
 
-                    <h3>{{ evento.nome }}</h3>
+                    <h3>{{ evento.nome }} - {{ evento.tipoevento }} </h3>
                     <h5>Vagas: {{ evento.vagas }}</h5>
                     
                     <div class="evento-botoes">
