Fix: botão de inscrição no medal que estava deixando vagas negativas

--- a/sgea/login/templates/usuarios/eventosU.html
+++ b/sgea/login/templates/usuarios/eventosU.html
@@ -71,7 +71,13 @@
                             {% else %}
                                 <form method="post" action="{% url 'inscricao_evento' usuario.id_usuario evento.id_evento %}">
                                     {% csrf_token %}
-                                    <button type="submit" class="eventos-inscricao-btn">Inscrever-se</button>
+                                    <button 
+                                        type="submit" 
+                                        class="eventos-inscricao-btn"
+                                        data-vagas="{{ evento.vagas }}"
+                                    >
+                                        Inscrever-se
+                                    </button>
                                 </form>
                             {% endif %}
                         </div>
